Tweak blog editor tab

--- a/meson.build
+++ b/meson.build
@@ -26,17 +26,17 @@ executable(
     'src/IO.vala',
     'src/Application.vala',
     'src/Pages/Base.vala',
-    'src/Pages/Paginated.vala',
+    'src/Pages/Blog.vala',
     'src/Project.vala',
     'src/Widgets/HeaderBar.vala',
     'src/Widgets/Sidebar.vala',
     'src/Widgets/StatusBar.vala',
     'src/Widgets/Notebook.vala',
     'src/Widgets/SourceView.vala',
-    'src/Widgets/Tabs/AbstractTab.vala',
+    'src/Widgets/Tabs/Base.vala',
     'src/Widgets/Tabs/Startup.vala',
     'src/Widgets/Tabs/PageEditor.vala',
-    'src/Widgets/Tabs/PageList.vala',
+    'src/Widgets/Tabs/BlogEditor.vala',
     'src/Windows/NewPage.vala',
     'src/Windows/Main.vala',
     dependencies: [
