Allow child pages

--- a/meson.build
+++ b/meson.build
@@ -28,6 +28,7 @@ executable(
     'src/Pages/Base.vala',
     'src/Pages/Text.vala',
     'src/Pages/Blog.vala',
+    'src/Pages/BlogArticle.vala',
     'src/Theme.vala',
     'src/Project.vala',
     'src/Widgets/FormLabel.vala',
@@ -49,6 +50,7 @@ executable(
         dependency('gee-0.8', version: '>=0.8.5'),
         dependency('json-glib-1.0'),
         dependency('gtksourceview-3.0', version: '>=3.24'),
+        dependency('gtkspell3-3.0'),
         dependency('granite'),
         libmarkdown,
     ],
