--- a/meson.build
+++ b/meson.build
@@ -25,6 +25,7 @@ executable(
     # asresources,
     'src/IO.vala',
     'src/Application.vala',
+    'src/Pages.vala',
     'src/Pages/Base.vala',
     'src/Pages/Text.vala',
     'src/Pages/Blog.vala',
