Initial page settings

--- a/meson.build
+++ b/meson.build
@@ -32,9 +32,10 @@ executable(
     'src/Pages/BlogArticle.vala',
     'src/Theme.vala',
     'src/Project.vala',
-    'src/Widgets/FormLabel.vala',
+    'src/Widgets/Forms/Label.vala',
     'src/Widgets/HeaderBar.vala',
     'src/Widgets/Structure.vala',
+    'src/Widgets/PageSettings.vala',
     'src/Widgets/Sidebar.vala',
     'src/Widgets/StatusBar.vala',
     'src/Widgets/Notebook.vala',
