Add initial pagination

--- a/meson.build
+++ b/meson.build
@@ -28,10 +28,12 @@ executable(
     'src/Pages.vala',
     'src/Pages/Base.vala',
     'src/Pages/Text.vala',
+    'src/Pages/Paginated.vala',
     'src/Pages/Blog.vala',
     'src/Pages/BlogArticle.vala',
     'src/Theme.vala',
     'src/Project.vala',
+    'src/Paginator.vala',
     'src/Widgets/HeaderBar.vala',
     'src/Widgets/Structure.vala',
     'src/Widgets/PageSettings.vala',
